--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: ./backend
     container_name: docker-log-viewer-backend
     restart: unless-stopped
-    ports:
-      - "2001:2001"
+    expose:
+      - "2001"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
@@ -15,11 +15,7 @@ services:
       - log-viewer-network
 
   frontend:
-    build:
-      context: ./frontend
-      args:
-        REACT_APP_API_URL: http://188.225.56.178:2001
-        REACT_APP_WS_URL: ws://188.225.56.178:2001
+    build: ./frontend
     container_name: docker-log-viewer-frontend
     restart: unless-stopped
     ports:
